# KalaMove

./: .gitignore  CHANGES.md  CMakeLists.txt  LICENSE.md  MANIFEST.kmf  README.md  build_windows.bat  copy_to_circuit_chan.bat  copy_to_elypso_engine.bat  copy_to_elypso_hub.bat  next_version_goals.md  targets.txt
include/: core.hpp
include/core/: core.hpp
src/: core.cpp  main.cpp
src/core/: core.cpp
